<resources>
    <!--strings in java/xml files-->
    <string name="app_name">LabOneRosemary</string>
    <string name="main_title_text">Oscar Review</string>
    <string name="post_review_hint">Enter review here</string>
    <string name="post_nominee_hint">Enter nominee here</string>
    <string name="button_send_review">Post Review</string>
    <string name="button_view_review">View Reviews</string>
    <string name="button_back">Back</string>
    <string name="list_view_empty_text">No reviews found</string>
    <string name="list_view_reviews_title">Reviews for selected category:</string>

    <!--strings in preferences file-->
    <string name="preference_key_username">username</string>
    <string name="preference_key_password">password</string>
    <string name="preference_key_main_bg_color">main_bg_color</string>
    <string name="preference_username_title">Username</string>
    <string name="preference_username_summary">Set or change username</string>
    <string name="preference_user_password">Password</string>
    <string name="preference_user_password_summary">Set or change password</string>
    <string name="preference_main_bg_color_title">Main background colour</string>
    <string name="preference_main_bg_color_summary">Modify background colour</string>

    <!--radio buttons-->
    <string name="radio_button_picture_title">Best Picture</string>
    <string name="radio_button_actor_title">Best Actor</string>
    <string name="radio_button_actress_title">Best Actress</string>
    <string name="radio_button_editing_title">Film Editing</string>
    <string name="radio_button_effects_title">Visual Effects</string>

</resources>
